# ssfit

./: CMakeLists.txt  README.md
cmake/: FindMinuit2.cmake
config/: ssfitConfig.h.in
docs/: CMakeLists.txt  ssfit.in
docs/include/: README.md.html
src/: CMakeLists.txt  OutputFormat.h  curves.cpp  curves.h  fitstatistics.cpp  fitstatistics.h  flags.h  help.cpp  help.h  main.cpp  outlog.h  process.cpp  process.h  readPVT.cpp  readPVT.h  readPVTblock.cpp  readPVTblock.h  readranges.cpp  readranges.h  savedata.cpp  savedata.h  sortdata.cpp  sortdata.h  sseos_approx_v.cpp  sseos_approx_v.h  sseos_params.h  sseos_v.cpp  sseos_v.h  sseos_y_finder.cpp  sseos_y_finder.h  sseos_yv.cpp  sseos_yv.h  sseos_yv_finder.cpp  sseos_yv_finder.h  ssfit.cpp  ssfit.h  yfit.cpp  yfit.h
