# get all *.cpp and *.c files
FILE(GLOB SRCPP_FILES *.cpp)
ADD_EXECUTABLE(ssfit ${SRCPP_FILES} ${SRC_FILES})

FIND_PACKAGE(Minuit2 REQUIRED)
FIND_PACKAGE(GSL REQUIRED)

INCLUDE_DIRECTORIES("${MINUIT2_INCLUDE_DIR}")
INCLUDE_DIRECTORIES("${GSL_INCLUDE_DIR}")
TARGET_LINK_LIBRARIES(ssfit ${MINUIT2_LIBRARY} ${GSL_LIBRARY})
